# AA-SI_Workbench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
AA-SI_Workbench/: .gitattributes  CITATION.cff  CODE_OF_CONDUCT.md  DISCLAIMER.md
backend/: .env.example  pyproject.toml
backend/src/aa_si_workbench/: cli.py
backend/src/aa_si_workbench/api/: derived.py  environment.py  files.py  main.py  ncei.py  recipes.py  terminal.py
backend/src/aa_si_workbench/builtin_recipes/: LICENSE  NOTICE  README.md  byo_folder_example.yaml  extra_calibration_hb1603_survey_pipeline.yaml  gcs_bucket_example.yaml  hb1603_survey_pipeline.yaml  hb1603_survey_pipeline_modular.yaml  machine_learning.yaml  machine_learning_multi_pass.yaml  pipeline_modified.yaml  processing_levels_pipeline.yaml  processing_levels_pipeline_gcs.config.yaml  processing_levels_pipeline_gcs.yaml  processing_lvl_0.yaml  processing_lvl_1.yaml  processing_lvl_1_gcs.yaml  processing_lvl_2.yaml  processing_lvl_3.yaml  processing_lvl_4.yaml  processing_lvls_1_to_3.yaml  run_gcs.sh  visualization.yaml
backend/src/aa_si_workbench/builtin_recipes/calibration_files/HB201607_cal/: HBB_018kHz_18July2016.cal  HBB_038kHz_18July2016.cal  HBB_070kHz_18July2016.cal  HBB_120kHz_18July2016.cal  HBB_200kHz_18July2016.cal
backend/src/aa_si_workbench/builtin_recipes/line_files/: SpermWhaleClicks_click_data_HB1603_SpermWhaleDive_Span0.2_07252016_2120_UTC.csv
backend/src/aa_si_workbench/io/: __init__.py
backend/tests/: test_derived.py  test_files.py  test_recipes.py  test_smoke.py
docs/: README.md
frontend/: .env.example  index.html  package-lock.json  package.json
scripts/: README.md
(+186 files in other folders)
