[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aa-si-workbench"
version = "0.1.0"
description = "Processing engine and API service for the AA-SI Workbench."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "17 U.S.C. Section 105 - U.S. Government work; see LICENSE.md" }
authors = [{ name = "NOAA Fisheries - Active Acoustics Strategic Initiative" }]
keywords = ["active acoustics", "fisheries acoustics", "echosounder", "NOAA"]
dependencies = [
  "numpy>=1.26",
  "xarray>=2024.1.0",
  # Active-acoustics I/O + processing (water-column sonar):
  "echopype>=0.9",
  # API service:
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  # NCEI catalog listing (anonymous access to the public noaa-wcsd-pds bucket):
  "boto3>=1.34",
]
# NOTE: the NCEI providers reuse `aalibrary` (the same library aa-find uses).
# Install it into this environment as well, e.g.
#   pip install "git+https://github.com/nmfs-ost/AA-SI_aalibrary.git"
# or run the backend inside the venv where aa-find already works.

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
# Fast NCEI listing via the BigQuery metadata.ncei_cache table
# (set AASI_NCEI_SOURCE=cache). Requires GCP application-default credentials.
ncei-cache = [
  "google-cloud-bigquery>=3.0",
  "pandas>=2.0",
  "db-dtypes>=1.0",
]

[project.scripts]
aa-workbench = "aa_si_workbench.cli:main"

[project.urls]
Repository = "https://github.com/nmfs-ost/AA-SI_Workbench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
